--- a/level2/.vscode/settings.json
+++ b/level2/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\park ji seong\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
+    "python.pythonPath": "C:\\Users\\hyoshincopy\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
